--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.1
 defusedxml==0.7.1
 diff-match-patch==20200713
+dj-static==0.0.6
 Django==4.0.4
 django-ckeditor==6.4.0
 django-import-export==2.8.0
@@ -13,6 +14,7 @@ openpyxl==3.0.9
 psycopg2==2.9.3
 PyYAML==6.0
 sqlparse==0.4.2
+static3==0.7.0
 tablib==3.2.1
 tzdata==2022.1
 xlrd==2.0.1
